--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12
+  - python=3.11
+  - ipykernel
   - numpy
   - pandas
   - matplotlib
   - seaborn
   - scipy
-  - scikit-learn
+  - scikit-learn=1.3.2
   - imbalanced-learn
   - requests
   - beautifulsoup4
